<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:background="@color/light_dark_red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0">
        <TextView
            android:padding="@dimen/dimen_2"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimen_7"
            android:layout_weight="0.45"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/days"
            android:textStyle="bold"
            android:textSize="@dimen/dimen_16"/>
        <TextView
            android:padding="@dimen/dimen_2"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimen_7"
            android:layout_weight="0.3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cloud"
            android:textStyle="bold"
            android:textSize="@dimen/dimen_16"
            android:visibility="gone"/>
        <TextView
            android:padding="@dimen/dimen_2"
            android:gravity="left"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimen_7"
            android:layout_weight="0.2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/max_temp"
            android:textStyle="bold"
            android:textSize="@dimen/dimen_16"/>
        <TextView
            android:padding="@dimen/dimen_2"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimen_7"
            android:layout_weight="0.2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/min_temp"
            android:textStyle="bold"
            android:textSize="@dimen/dimen_16"/>

    </LinearLayout>
    <android.support.v7.widget.CardView
        android:background="@color/black_12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/dimen_7"
        android:elevation="@dimen/dimen_7"
        app:cardCornerRadius="@dimen/dimen_1"
        android:layout_margin="@dimen/dimen_7">
    <android.support.v7.widget.RecyclerView
        android:padding="@dimen/dimen_5"
        android:id="@+id/mRecyclerViewFiveDaysForecast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
    </android.support.v7.widget.CardView>

</LinearLayout>