<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dimen_5"
        app:cardCornerRadius="@dimen/dimen_3"
        app:cardElevation="@dimen/dimen_5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_dark_red">

            <TextView
                android:id="@+id/mTextViewWeekDayName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dimen_9"
                android:elevation="@dimen/dimen_3"
                android:text="@string/week_name"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_16"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/mTextViewMaxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginEnd="76dp"
                android:layout_marginLeft="@dimen/dimen_7"
                android:layout_marginRight="@dimen/dimen_7"
                android:layout_marginTop="@dimen/dimen_7"
                android:layout_toStartOf="@+id/mTextViewMinTemp"
                android:gravity="end"
                android:text="32"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_16"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/mTextViewMinTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginEnd="21dp"
                android:layout_marginLeft="@dimen/dimen_5"
                android:layout_marginRight="@dimen/dimen_5"
                android:layout_marginTop="@dimen/dimen_7"
                android:elevation="@dimen/dimen_3"
                android:gravity="end"
                android:text="26"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_16"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/mTextViewCloud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mTextViewWeekDayName"
                android:layout_margin="@dimen/dimen_9"
                android:text="thunderStorm"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignStart="@+id/mTextViewCloud"
                android:layout_below="@+id/mTextViewCloud"
                android:layout_marginTop="31dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_3"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_3"
                        android:layout_marginLeft="@dimen/dimen_5"
                        android:layout_marginRight="@dimen/dimen_5"
                        android:text="@string/wind"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/mTextViewWind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_3"
                        android:text="Moderate, 21 km/h E"
                        android:textColor="@color/white" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_3"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_3"
                        android:layout_marginLeft="@dimen/dimen_5"
                        android:layout_marginRight="@dimen/dimen_5"
                        android:text="@string/humidity"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/mTextViewHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_3"
                        android:text="49 %"
                        android:textColor="@color/white" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_3"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_3"
                        android:layout_marginLeft="@dimen/dimen_5"
                        android:layout_marginRight="@dimen/dimen_5"
                        android:text="@string/speed"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/mTextViewSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_3"
                        android:text="3.1 km/h"
                        android:textColor="@color/white" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_3"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_3"
                        android:layout_marginLeft="@dimen/dimen_5"
                        android:layout_marginRight="@dimen/dimen_5"
                        android:text="@string/pressure"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/mTextViewPressue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_3"
                        android:text="1056 hPa"
                        android:textColor="@color/white" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_3"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_3"
                        android:layout_marginLeft="@dimen/dimen_5"
                        android:layout_marginRight="@dimen/dimen_5"
                        android:text="@string/snow"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/mTextViewSnow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_3"
                        android:text="0.01 %"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/dimen_7"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_7"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Morning" />

                        <ImageView
                            android:id="@+id/mImageViewMorning"
                            android:layout_width="34dp"
                            android:layout_height="34dp"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/dimen_5"
                            android:background="@drawable/morning_icon" />

                        <TextView
                            android:id="@+id/mTextViewTempMorn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/dimen_5"
                            android:text="32" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Afternoon" />

                        <ImageView
                            android:id="@+id/mImageViewAfterNoon"
                            android:layout_width="34dp"
                            android:layout_height="34dp"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/dimen_5"
                            android:background="@drawable/cloud_sun" />

                        <TextView
                            android:id="@+id/mTextViewTempAfterNoon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/dimen_5"
                            android:text="35" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Evening" />

                        <ImageView
                            android:id="@+id/mImageViewEvening"
                            android:layout_width="34dp"
                            android:layout_height="34dp"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/dimen_5"
                            android:background="@drawable/evening_icon" />

                        <TextView
                            android:id="@+id/mTextViewTempEven"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/dimen_5"
                            android:text="30" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Night" />

                        <ImageView
                            android:id="@+id/mImageViewNight"
                            android:layout_width="34dp"
                            android:layout_height="34dp"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/dimen_5"
                            android:background="@drawable/night_icon" />

                        <TextView
                            android:id="@+id/mTextViewTempNight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/dimen_5"
                            android:text="32" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>